# graph_pred

./: README.md  experiments.txt  genotype_activations.py  genotype_aug.py  genotype_convolutions.py  genotype_normalization.py  genotype_normalizations.py  genotype_pooling.py  genotype_retrieve.py  graph_diagram.py  graph_evolve.py  graph_genotype.py  pred_tox.py  pyproject.toml  test_output.csv
generated_graphs/results1700970440/: results.json
generated_graphs/results1700970863/: results.json
generated_graphs/results1701019275/: results.json
generated_graphs/results1701033511/: results.json
generated_graphs/results1701035243/: results.json
generated_graphs/results1701035721/: results.json
generated_graphs/results1701037815/: results.json
generated_graphs/results1701039106/: results.json
generated_graphs/results1701039321/: results.json
generated_graphs/results1701126115/: results.json
generated_graphs/results1701134482/: results.json
generated_graphs/results1701141074/: results.json
generated_graphs/results1701185551/: results.json
generated_graphs/results1701198077/: results.json
graph_schematics/: graph_gen_GCN  graph_gen_GCN_OLD
results/: results.json
results1/: results.json
results1700970946/: results.json
results1700971755/: results.json
results1701012243/: results.json
results1701013370/: results.json
results1701013933/: results.json
results1701015476/: results.json
results1701017795/: results.json
results1701020194/: results.json
results1701025115/: results.json
results2/: results.json
(+15 files in other folders)
