[project]
name = "graph_pred_gnn_Ajax1234"
version = "0.0.1"
authors = [
  { name="James Petullo", email="jpetullo14@gmail.com" },
]
description = "Package to support GNN generation with GP"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Ajax12345/graph_pred"
